# picongpu

./: .appveyor.yml  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .project  .readthedocs.yaml  .readthedocs.yml  .rodare.json  .travis.yml  .zenodo.json  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FindADIOS.cmake  FindPNGwriter.cmake  FindSplash.cmake  Findcupla.cmake  FindmallocMC.cmake  INSTALL.md  INSTALL.rst  LICENSE  LICENSE.md  README.md  REFERENCE.md  RELEASE  SimpleUIVisClient.pro  USAGE.rst  Usage.md  alpakaConfig.cmake  appveyor.yml  camera.cpp  camera.h  clickablelabel.cpp  clickablelabel.h  compile  configure  (+46 more)
alpaka/example/bufferCopy/: CMakeLists.txt
alpaka/example/vectorAdd/: CMakeLists.txt
alpaka/test/: CMakeLists.txt
alpaka/test/analysis/: CMakeLists.txt
alpaka/test/catch_main/: CMakeLists.txt
alpaka/test/common/: CMakeLists.txt  devCompileOptions.cmake
alpaka/test/integ/: CMakeLists.txt
alpaka/test/unit/: CMakeLists.txt
example/reduce/: CMakeLists.txt
example/reduce/src/: alpakaConfig.hpp  iterator.hpp  kernel.hpp
example/vectorAdd/: CMakeLists.txt
example/vectorAdd/src/: main.cpp  vectorAdd.cpp
include/mpiInfo/: CMakeLists.txt  main.cpp  mpiInfo.cpp
include/picongpu/: ArgsParser.cpp  ArgsParser.hpp  CMakeLists.txt  MetadataAggregator.cpp  MetadataAggregator.hpp  MetadataRegisteredAtCT.hpp  Perf.cpp  _defaultParam.loader  _defaultUnitless.loader  boost_workaround.hpp  defines.hpp  extensionParam.loader  extensionUnitless.loader  logging.hpp  main.cpp  main.cu  main.x.cpp  metadata.cpp  metadata.hpp  metadataCT.def  pmacc_renamings.hpp  simulation_classTypes.hpp  simulation_defines.hpp  simulation_defines_lite.hpp  simulation_types.hpp  version.hpp  versionFormat.cpp  versionFormat.cu  versionFormat.hpp  versionFormat.x.cpp
include/picongpu/algorithms/: AssignedTrilinearInterpolation.hpp  DifferenceToLower.def  DifferenceToLower.hpp  DifferenceToUpper.def  DifferenceToUpper.hpp  FieldToParticleInterpolation.hpp  FieldToParticleInterpolationNative.hpp  Gamma.def  Gamma.hpp  KinEnergy.hpp  LinearInterpolateWithUpper.hpp  Set.hpp  ShiftCoordinateSystem.hpp  ShiftCoordinateSystemNative.hpp  Velocity.hpp
include/picongpu/debug/: PIConGPUVerbose.hpp
include/picongpu/fields/: CellType.hpp  EMFieldBase.hpp  EMFieldBase.tpp  EMFieldBase.x.cpp  FieldB.cpp  FieldB.hpp  FieldB.tpp  FieldB.x.cpp  FieldE.cpp  FieldE.hpp  FieldE.kernel  FieldE.tpp  FieldE.x.cpp  FieldJ.cpp  FieldJ.hpp  FieldJ.kernel  FieldJ.tpp  FieldJ.x.cpp  FieldManipulator.hpp  FieldManipulator.kernel  FieldTmp.cpp  FieldTmp.hpp  FieldTmp.kernel  FieldTmp.tpp  FieldTmp.x.cpp  FieldTmpOperations.hpp  Fields.def  Fields.hpp  Fields.tpp  LaserPhysics.def  LaserPhysics.hpp  Manipulate.hpp  YeeCell.hpp  absorber.hpp
include/picongpu/initialization/: IInitPlugin.hpp  InitPluginNone.hpp  InitialiserController.hpp  ParserGridDistribution.cpp  ParserGridDistribution.hpp  SimStartInitialiser.hpp
include/picongpu/param/: Synchrotron.param  atomicPhysics.param  atomicPhysics2.param  atomicPhysics2_Debug.param  atomicPhysics_Debug.param  binningSetup.param  bremsstrahlung.param  collision.param  components.param  density.param  dimension.param  externalBeam.param  fieldAbsorber.param  fieldBackground.param  fieldSolver.param  fileOutput.param  flylite.param  grid.param  incidentField.param  ionizationEnergies.param  ionizer.param  isaac.param  iterationStart.param  laser.param  mallocMC.param  memory.param  metadata.param  particle.param  particleCalorimeter.param  particleFilters.param  particleMerger.param  photonDetector.param  physicalConstants.param  pml.param  png.param  pngColorScales.param  precision.param  pusher.param  radiation.param  radiationObserver.param  (+15 more)
include/picongpu/particles/: CallBremsstrahlung.tpp  CallSynchrotronPhotons.tpp  DeviceHeap.hpp  InitFunctors.hpp  InterpolationForPusher.hpp  Manipulate.def  Manipulate.hpp  MoveParticle.hpp  Particles.hpp  Particles.kernel  Particles.tpp  ParticlesFunctors.hpp  ParticlesFunctors.x.cpp  ParticlesInit.kernel  PhotonFunctors.hpp  StaticField.hpp  StaticField.tpp  param.hpp  shapes.hpp
include/picongpu/plugins/: BinEnergyParticles.hpp  BinEnergyParticles.x.cpp  ChargeConservation.hpp  ChargeConservation.tpp  ChargeConservation.x.cpp  Checkpoint.hpp  Checkpoint.x.cpp  CountParticles.hpp  CountParticles.x.cpp  Emittance.hpp  Emittance.x.cpp  EnergyFields.hpp  EnergyFields.x.cpp  EnergyParticles.hpp  EnergyParticles.x.cpp  ILightweightPlugin.hpp  ISimulationPlugin.hpp  IntensityPlugin.hpp  IsaacPlugin.hpp  IsaacPlugin.x.cpp  LiveViewPlugin.hpp  PluginController.hpp  PluginRegistry.hpp  PngPlugin.hpp  PngPlugin.x.cpp  PositionsParticles.hpp  ResourceLog.cpp  ResourceLog.hpp  SliceFieldPrinter.hpp  SliceFieldPrinter.tpp  SliceFieldPrinterMulti.hpp  SliceFieldPrinterMulti.tpp  SumCurrents.hpp  SumCurrents.x.cpp
include/picongpu/simulationControl/: DomainAdjuster.hpp  GuardHandlerCallPlugins.hpp  ISimulationStarter.hpp  MovingWindow.hpp  MySimulation.hpp  SimulationStarter.hpp  Window.hpp
include/pmacc/: CMakeLists.txt  Environment.def  Environment.hpp  Environment.tpp  HandleGuardRegion.hpp  PMaccConfig.cmake  RefWrapper.hpp  assert.hpp  basicOperations.hpp  boost_workaround.hpp  cudaSpecs.hpp  dummy.cpp  filesystem.hpp  forward.hpp  lockstep.hpp  ppFunctions.hpp  result_of_Functor.hpp  static_assert.hpp  types.hpp  verify.hpp
src/cuda_memtest/: CMakeLists.txt  cuda_memtest.cu  cuda_memtest.h  misc.cpp  ocl_memtest.cpp  ocl_memtest_kernels.cpp  ocl_tests.cpp  ocl_tests.h  sanity_check.sh  tests.cu
src/libPMacc/: CMakeLists.txt  PMaccConfig.cmake  pmaccConfig.cmake
src/mpiInfo/: CMakeLists.txt  main.cpp
src/picongpu/: ArgsParser.cpp  ArgsParser.cu  CMakeLists.txt  main.cu  particlePatches.cpp  patchReader.cpp  stringHelpers.cpp
src/splash2txt/: CMakeLists.txt  splash2txt.cpp
test/common/: CMakeLists.txt
test/integ/: CMakeLists.txt
test/picongpuHeaderCheck/: CMakeLists.txt
test/pmaccHeaderCheck/: CMakeLists.txt
test/unit/: CMakeLists.txt
(+6664 files in other folders)
